@@ -605,13 +605,14 @@ namespace __variant
 	    if (__rhs._M_valid())
 	      {
 		static constexpr void (*_S_vtable[])(void*, void*) =
-		  { &__erased_assign<_Types&, const _Types&>... };
-		_S_vtable[__rhs._M_index](this->_M_storage(), __rhs._M_storage());
+		  { &__erased_assign<_Types&, _Types&&>... };
+		_S_vtable[__rhs._M_index]
+		  (this->_M_storage(), __rhs._M_storage());
 	      }
 	  }
 	else
 	  {
-	    _Move_assign_base __tmp(__rhs);
+	    _Move_assign_base __tmp(std::move(__rhs));
 	    this->~_Move_assign_base();
 	    __try
 	      {
