@@ -1,3 +1,10 @@
+2018-04-03  Jonathan Wakely  <jwakely@redhat.com>
+
+	PR libstdc++/85183
+	* include/std/variant (_Move_assign_base::operator=): Fix incorrect
+	value categories.
+	* testsuite/20_util/variant/85183.cc: New.
+
 2018-03-26  Jonathan Wakely  <jwakely@redhat.com>
 
 	* include/std/variant (__get): Qualify calls to avoid ADL.
